# go-pcap2socks

./: --help  .env.example  .gitignore  .golangci.yml  ANALYSIS.md  AUTO-START.md  AUTOMATION_ROADMAP.md  CHANGELOG.md  CHANGELOG_DHCP.md  CONTRIBUTING.md  DHCP_FIX_SUMMARY.md  DISABLED_bench.bat  DISABLED_bench.sh  DISABLED_test-race.bat  DISABLED_test-race.sh  DISABLED_test.bat  DISABLED_test.sh  FINAL_SUMMARY.md  FULL_DOCS.md  FUZZING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTED_IMPROVEMENTS.md  IMPROVEMENTS.md  IMPROVEMENTS_REPORT.md  IMPROVEMENTS_SANDBOX.md  IMPROVEMENTS_SUMMARY.md  INSTALL_LINUX.md  LICENSE  LICENSE_RU  Makefile.cross  NEW_FEATURES.md  NEW_MODULES_README.md  NOTIFICATIONS.md  OPTIMIZATION_SUMMARY.txt  PACKAGE_ANALYSIS.md  POWERSHELL.md  QUICK_START.md  QUICK_START_PS4.md  README-PS4.md  README.md  (+86 more)
.claude/: settings.local.json
.githooks/: pre-commit
api/: auth.go  auth_test.go  mac_filter.go  mac_filter_test.go  ratelimit.go  ratelimit_test.go  request.go  request_test.go  server.go  server_integration_test.go  server_options.go  server_options_test.go  server_test.go  server_unix.go  server_windows.go  setup.go  wan_balancer.go  websocket.go  websocket_test.go
app/: application.go
arpr/: arp.go
asynclogger/: async_handler.go
auto/: device_detector.go  device_detector_test.go  device_profile.go  engine_failover.go  engine_failover_test.go  engine_selector.go  engine_selector_test.go  interface_selector.go  proxy_selector.go  smart_dhcp.go  smart_dhcp_test.go  tuner.go  tuner_test.go  tuner_unix.go  tuner_windows.go
bandwidth/: README.md  (+3 more)
(+292 files in other folders)
